--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,3 +31,58 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  width: 140px;
+  height: 100px;
+  margin-right: 10px;
+  display:inline-block;
+  padding:0.3em 1.2em;
+  margin:0 0.3em 0.3em 0;
+  border-radius:2em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  font-size: 1rem;
+  color:#FFFFFF;
+  background-color:#4eb5f1;
+  text-align:center;
+  transition: all 0.2s;
+  border: none;
+}
+
+a.button3:hover {
+  background-color: #4095c6;
+}
+
+@media all and (max-width:30em) {
+  a.button3 {
+    display: block;
+    margin: 0.2em auto;
+  }
+}
+
+#root {
+  margin: 50px;
+  border: 1px solid black;
+  height: 40rem;
+}
+
+.logo {
+  width: 140px;
+}
+
+.mainpage {
+  display: flex;
+}
+
+.wrapper1 {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+}
+
+.space {
+  width: 620px;
+}
