--- a/client/src/App.css
+++ b/client/src/App.css
@@ -64,13 +64,8 @@ a.button3:hover {
 }
 
 #root {
-  margin: 50px;
-  border: 1px solid black;
+  margin: 5px;
   height: 40rem;
-}
-
-.logo {
-  width: 140px;
 }
 
 .mainpage {
@@ -83,6 +78,24 @@ a.button3:hover {
   flex-direction: row;
 }
 
-.space {
-  width: 620px;
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.container2 {
+  display: flex;
+  flex-direction: row;
+}
+
+.wrapper3 {
+  display: flex;
+  flex-direction: row;
+  width: 70%;
+}
+
+.menuItem {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
