Commit 26: get Single Ticket Component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -99,4 +99,11 @@ a.button3:hover {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  height: min-content;
+}
+
+.wrapper4 {
+  background-color: antiquewhite;
+  width: 45%;
+  height: 600px;
 }
