--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,7 @@ button {
   display:inline-block;
   padding:0.3em 1.2em;
   margin:0 0.3em 0.3em 0;
-  border-radius:2em;
+  border-radius: 5px;
   box-sizing: border-box;
   text-decoration:none;
   font-family:'Roboto',sans-serif;
